Fix manager grey screen from root calls